<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_pt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factory_name"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />
    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/icon_location"
        android:layout_below="@+id/txt_pt_name"
        android:layout_alignStart="@id/txt_pt_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factory_location"
        android:textSize="15sp"
        android:layout_below="@+id/txt_pt_name"
        android:layout_toRightOf="@id/icon_location"
        android:layout_alignTop="@id/icon_location"
        android:layout_marginLeft="8dp"
        android:textColor="@color/black_two"
        />
    <RelativeLayout
        android:id="@+id/header_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_location"
        android:background="@drawable/information_background"
        android:paddingVertical="12dp"
        android:layout_alignStart="@id/icon_location"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/txt_informasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Informasi perubahan data katalog"
            android:textSize="13sp"
            android:textColor="@color/grey"
            android:layout_centerHorizontal="true"
            />
        <RelativeLayout
            android:id="@+id/txt_pembaruan_awal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_informasi"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/txt_pembaruan_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pembaruan terakhir: "
                android:textSize="13sp"
                android:textColor="@color/grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txt_pembaruan_start"
                android:text="@string/date_start"
                android:textSize="13sp"
                android:textColor="@color/orange_tua"
                android:textStyle="bold"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/txt_pembaruan_akhir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_pembaruan_awal"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/txt_pembaruan_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pembaruan selanjutnya: "
                android:textSize="13sp"
                android:textColor="@color/grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txt_pembaruan_end"
                android:text="@string/date_end"
                android:textSize="13sp"
                android:textColor="@color/orange_tua"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/box_katalog"
        android:layout_below="@id/header_box"
        android:layout_alignStart="@id/header_box"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:background="@drawable/box"
        android:elevation="10dp"
        android:padding="20dp"
        >
        <ImageView
            android:id="@+id/icon_katalog"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/icon_katalog"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_katalog"
            android:layout_below="@id/icon_katalog"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/box_tender"
        android:layout_below="@id/header_box"
        android:layout_alignEnd="@id/header_box"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:background="@drawable/box"
        android:elevation="10dp"
        android:padding="20dp"
        >
        <ImageView
            android:id="@+id/icon_tender"
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:src="@drawable/icon_saved"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tender"
            android:layout_below="@id/icon_tender"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/box_laporan"
        android:layout_below="@id/box_katalog"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_alignStart="@id/box_katalog"
        android:background="@drawable/box"
        android:elevation="10dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:id="@+id/icon_laporan"
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:src="@drawable/icon_laporan"
            android:scaleX="-1"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_laporan"
            android:layout_below="@id/icon_laporan"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/box_pengaturan"
        android:layout_below="@id/box_tender"
        android:layout_alignEnd="@id/header_box"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:background="@drawable/box"
        android:elevation="10dp"
        android:padding="20dp"
        android:layout_alignTop="@id/box_laporan"
        >
        <ImageView
            android:id="@+id/icon_pengaturan"
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:src="@drawable/icon_pengaturan"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_pengaturan"
            android:layout_below="@id/icon_pengaturan"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</RelativeLayout>